fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,16 @@
   float: left;
   height: 19em;
   width: 33%;
-  margin-left: 30px;
+  margin-left: 50px;
   margin-right: -100px;
+  padding:10px;
+}
+
+.column3 {
+  float: left;
+  height: 19em;
+  width: 33%;
+  margin-right: 30px;
   padding:10px;
 }
 
